# StreamCloud

./: .gitattributes  .gitignore  .replit  README.md  package.json  pyproject.toml
.emergent/: emergent.yml
.github/workflows/: build-apk.yml  sed8WZxfr
AioWebAndroid/app/: build.gradle.kts
AioWebAndroid/app/src/main/: AndroidManifest.xml
AioWebAndroid/app/src/main/java/com/aioweb/app/: AioWebApplication.kt  MainActivity.kt
AioWebAndroid/app/src/main/java/com/lagradost/cloudstream3/: App.kt
AioWebAndroid/app/src/main/java/com/streamcloud/app/: StreamCloudApplication.kt
AioWebAndroid/app/src/main/res/drawable/: widget_bg.xml
AioWebAndroid/app/src/main/res/xml/: automotive_app_desc.xml
StreamCloud/: build.gradle.kts  gradle.properties  settings.gradle.kts
StreamCloud/app/: build.gradle.kts  proguard-rules.pro
StreamCloud/app/src/main/: AndroidManifest.xml
StreamCloud/app/src/main/assets/: po_token.html
StreamCloud/app/src/main/java/com/lagradost/api/: Log.kt
StreamCloud/app/src/main/java/com/lagradost/cloudstream3/: App.kt  CommonActivity.kt  MainAPI.kt  MainActivity.kt  ParCollections.kt
StreamCloud/app/src/main/res/drawable/: ic_notif_fav.xml  ic_notif_fav_filled.xml  ic_notif_repeat.xml  ic_notif_repeat_one.xml
StreamCloud/app/src/main/res/layout/: widget_music.xml
StreamCloud/app/src/main/res/values/: strings.xml  themes.xml
StreamCloud/app/src/main/res/xml/: automotive_app_desc.xml  widget_music_info.xml
backend/: server.py
frontend/: craco.config.js  package.json
memory/: PRD.md
(+239 files in other folders)
