[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
